--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                                 <div class="items"></div>
                             </li>
                             <li>
-                                <a href="javascript:;">家居</a><span class="slash">/</span><a href="javascript:;">家居</a><span class="slash">/</span><a href="javascript:;">家装</a><span class="slash">/</span><a href="javascript:;">厨具</a></li>
+                                <a href="javascript:;">家居</a><span class="slash">/</span><a href="javascript:;">家居</a><span class="slash">/</span><a href="javascript:;">家装</a><span class="slash">/</span><a href="javascript:;">厨具</a>
                                 <div class="items"></div>
                             <li>
                                 <a href="javascript:;">男装</a><span class="slash">/</span><a href="javascript:;">女装</a><span class="slash">/</span><a href="javascript:;">童装</a><span class="slash">/</span><a href="javascript:;">内衣</a>
@@ -1362,18 +1362,18 @@
         </div>
         <div class="elevator">
             <ul class="elevator-list clearfix">
-                <li><a class="ele-lk" href="javascript:;">京东秒杀</a></li>
-                <li><a class="ele-lk" href="javascript:;">特色优选</a></li>
-                <li><a class="ele-lk" href="javascript:;">频道广场</a></li>
-                <li><a class="ele-lk" href="javascript:;">为你推荐</a></li>
+                <li><a class="ele-lk ele-jdms" href="javascript:;">京东秒杀</a></li>
+                <li><a class="ele-lk ele-tsyx" href="javascript:;">特色优选</a></li>
+                <li><a class="ele-lk ele-pdgc" href="javascript:;">频道广场</a></li>
+                <li><a class="ele-lk ele-wntj" href="javascript:;">为你推荐</a></li>
                 <li>
-                    <a class="ele-lk" href="javascript:;">
+                    <a class="ele-lk ele-kf" href="javascript:;">
                         <i class="iconfont icon-pinglun"></i>
                         客服
                     </a>
                 </li>
                 <li>
-                    <a class="ele-lk" href="javascript:;">
+                    <a class="ele-lk ele-fk" href="javascript:;">
                         <i class="iconfont icon-chuangzuo"></i>
                         反馈
                     </a>
